qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
            - containerPort: 6881
          volumeMounts:
            - name: root
              mountPath: /data
            - name: config
              mountPath: /config/qbittorrent
      volumes:
        - name: root
          persistentVolumeClaim:
            claimName: nfs-pvc
        - name: config
          persistentVolumeClaim:
            claimName: nfs-config-pvc
