qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      name: tcp
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: exp
      port: 6881
      targetPort: 6881
  type: ClusterIP
